clusters/default/api/cors-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-middleware
  namespace: api
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
      - "POST"
      - "DELETE"
    accessControlAllowOriginList:
      - "https://admin.ryanschnabel.com"
    accessControlMaxAge: 100
    addVaryHeader: true
