clusters/default/api/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      nodeSelector:
        kubernetes.io/hostname: master
      containers:
      - name: api
        image: schniebel/ryanschnabel-api:391a423e78e7ef549b40cee9cb204f0474d333fd
        ports:
        - containerPort: 8080
