clusters/default/api/api-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: api
spec:
  podSelector: {}
  policyTypes:
  - Ingress
